--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <span class="text-2xl ml-1 uppercase">Plant Eco</span>
           </div>
           <ul class="hidden sm:flex flex-1 justify-end items-center gap-12 text-bookmark-blue  uppercase text-xs">
-            <li class="cursor-pointer">Blog</li>
+            <li class="cursor-pointer"><a href="blog.html">BLOG</a></li>
             <li class="cursor-pointer">Pricing</li>
             <li class="cursor-pointer">Contact</li>
             <button type="button" class="bg-bookmark-red text-white rounded-md px-7 py-3 uppercase shadow-2xl py-3 px-6 rounded-md transition duration-300 bg-bookmark-purple text-white hover:bg-bookmark-white hover:text-bookmark-grey hover:border-2 hover:border-grey-700">Login</button>
