--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
    data-aos-duration="2000">
        <nav class="container flex items-center py-4 mt-4 border-2  sm:mt-12 ">
           <div class="py-1">
-            <i class="" aria-hidden="true"></i>
-            <i class=" fa fa-leaf text-bookmark-purple text-3xl"></i> 
+            <a href="index.html">
+              <i class=" fa fa-leaf text-bookmark-purple text-3xl"></i> 
             <span class="text-2xl ml-1 uppercase">Plant Eco</span>
+            </a>
           </div>
           <ul class="hidden sm:flex flex-1 justify-end items-center gap-12 text-bookmark-blue  uppercase text-xs">
             <li class="cursor-pointer"><a href="blog.html">BLOG</a></li>
